# emulator-code

./: README.md  emulator code.code-workspace  platformio.ini
include/: ili9488_driver.hpp  lv_conf.h  my_display.hpp
lib/battery_sim/: battery_sim.hpp
src/: display.cpp  display_thread.cpp  display_thread.hpp  main.cpp  ui_screens.cpp  ui_screens.hpp
test/gtest/: CMakeLists.txt  test_battery_sim.cpp
